--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de098b90",
    "metadata": {},
    "outputs": [
@@ -10,111 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-2.2.3-cp311-cp311-win_amd64.whl.metadata (19 kB)\n",
-      "Collecting numpy\n",
-      "  Using cached numpy-2.2.5-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
-      "Collecting matplotlib\n",
-      "  Using cached matplotlib-3.10.1-cp311-cp311-win_amd64.whl.metadata (11 kB)\n",
-      "Collecting seaborn\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting scikit-learn\n",
-      "  Using cached scikit_learn-1.6.1-cp311-cp311-win_amd64.whl.metadata (15 kB)\n",
-      "Collecting nltk\n",
-      "  Using cached nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: pandas in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (2.2.5)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (3.10.1)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (1.6.1)\n",
+      "Requirement already satisfied: nltk in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (3.9.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Downloading contourpy-1.3.2-cp311-cp311-win_amd64.whl.metadata (5.5 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Using cached fonttools-4.57.0-cp311-cp311-win_amd64.whl.metadata (104 kB)\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
-      "  Using cached kiwisolver-1.4.8-cp311-cp311-win_amd64.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (4.57.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (1.4.8)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (25.0)\n",
-      "Collecting pillow>=8 (from matplotlib)\n",
-      "  Downloading pillow-11.2.1-cp311-cp311-win_amd64.whl.metadata (9.1 kB)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
-      "  Using cached pyparsing-3.2.3-py3-none-any.whl.metadata (5.0 kB)\n",
-      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
-      "  Using cached scipy-1.15.2-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.5.0-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Using cached threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Collecting click (from nltk)\n",
-      "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Downloading regex-2024.11.6-cp311-cp311-win_amd64.whl.metadata (41 kB)\n",
-      "     ---------------------------------------- 0.0/41.5 kB ? eta -:--:--\n",
-      "     -------------------------------------  41.0/41.5 kB 960.0 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 41.5/41.5 kB 396.3 kB/s eta 0:00:00\n",
-      "Collecting tqdm (from nltk)\n",
-      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "     ---------------------------------------- 0.0/57.7 kB ? eta -:--:--\n",
-      "     ----------------------------------- ---- 51.2/57.7 kB 2.6 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 57.7/57.7 kB 1.0 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (11.2.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from matplotlib) (3.2.3)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from scikit-learn) (1.15.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from scikit-learn) (1.5.0)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
+      "Requirement already satisfied: click in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from nltk) (8.1.8)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from nltk) (2024.11.6)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from nltk) (4.67.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\anmrt\\desktop\\practice_6sem\\venv\\lib\\site-packages (from click->nltk) (0.4.6)\n",
-      "Using cached pandas-2.2.3-cp311-cp311-win_amd64.whl (11.6 MB)\n",
-      "Downloading numpy-2.2.5-cp311-cp311-win_amd64.whl (12.9 MB)\n",
-      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
-      "    --------------------------------------- 0.3/12.9 MB 5.2 MB/s eta 0:00:03\n",
-      "   - -------------------------------------- 0.6/12.9 MB 6.3 MB/s eta 0:00:02\n",
-      "   --- ------------------------------------ 1.1/12.9 MB 7.9 MB/s eta 0:00:02\n",
-      "   ------ --------------------------------- 2.3/12.9 MB 12.0 MB/s eta 0:00:01\n",
-      "   ---------- ----------------------------- 3.4/12.9 MB 15.6 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 4.5/12.9 MB 16.9 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 5.6/12.9 MB 18.0 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 6.9/12.9 MB 19.0 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 7.8/12.9 MB 20.0 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 9.1/12.9 MB 19.9 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 10.3/12.9 MB 20.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 11.3/12.9 MB 25.1 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 12.5/12.9 MB 26.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 12.9/12.9 MB 24.3 MB/s eta 0:00:00\n",
-      "Using cached matplotlib-3.10.1-cp311-cp311-win_amd64.whl (8.1 MB)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Using cached scikit_learn-1.6.1-cp311-cp311-win_amd64.whl (11.1 MB)\n",
-      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
-      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
-      "   -------------------------- ------------- 1.0/1.5 MB 30.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.5/1.5 MB 19.2 MB/s eta 0:00:00\n",
-      "Downloading contourpy-1.3.2-cp311-cp311-win_amd64.whl (222 kB)\n",
-      "   ---------------------------------------- 0.0/222.0 kB ? eta -:--:--\n",
-      "   --------------------------------------- 222.0/222.0 kB 13.2 MB/s eta 0:00:00\n",
-      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Using cached fonttools-4.57.0-cp311-cp311-win_amd64.whl (2.2 MB)\n",
-      "Downloading joblib-1.5.0-py3-none-any.whl (307 kB)\n",
-      "   ---------------------------------------- 0.0/307.7 kB ? eta -:--:--\n",
-      "   --------------------------------------- 307.7/307.7 kB 19.8 MB/s eta 0:00:00\n",
-      "Using cached kiwisolver-1.4.8-cp311-cp311-win_amd64.whl (71 kB)\n",
-      "Downloading pillow-11.2.1-cp311-cp311-win_amd64.whl (2.7 MB)\n",
-      "   ---------------------------------------- 0.0/2.7 MB ? eta -:--:--\n",
-      "   ------------- -------------------------- 0.9/2.7 MB 55.0 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 1.5/2.7 MB 19.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.7/2.7 MB 28.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.7/2.7 MB 18.9 MB/s eta 0:00:00\n",
-      "Using cached pyparsing-3.2.3-py3-none-any.whl (111 kB)\n",
-      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Downloading regex-2024.11.6-cp311-cp311-win_amd64.whl (274 kB)\n",
-      "   ---------------------------------------- 0.0/274.1 kB ? eta -:--:--\n",
-      "   --------------------------------------- 274.1/274.1 kB 16.5 MB/s eta 0:00:00\n",
-      "Using cached scipy-1.15.2-cp311-cp311-win_amd64.whl (41.2 MB)\n",
-      "Using cached threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
-      "   ---------------------------------------- 0.0/98.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 98.2/98.2 kB 5.5 MB/s eta 0:00:00\n",
-      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "   ---------------------------------------- 0.0/78.5 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 78.5/78.5 kB 4.6 MB/s eta 0:00:00\n",
-      "Installing collected packages: pytz, tzdata, tqdm, threadpoolctl, regex, pyparsing, pillow, numpy, kiwisolver, joblib, fonttools, cycler, click, scipy, pandas, nltk, contourpy, scikit-learn, matplotlib, seaborn\n",
-      "Successfully installed click-8.1.8 contourpy-1.3.2 cycler-0.12.1 fonttools-4.57.0 joblib-1.5.0 kiwisolver-1.4.8 matplotlib-3.10.1 nltk-3.9.1 numpy-2.2.5 pandas-2.2.3 pillow-11.2.1 pyparsing-3.2.3 pytz-2025.2 regex-2024.11.6 scikit-learn-1.6.1 scipy-1.15.2 seaborn-0.13.2 threadpoolctl-3.6.0 tqdm-4.67.1 tzdata-2025.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -134,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f057f036",
    "metadata": {},
    "outputs": [],
@@ -160,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1e8392ed",
    "metadata": {},
    "outputs": [],
@@ -170,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0aee2921",
    "metadata": {},
    "outputs": [
@@ -207,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "6092c201",
    "metadata": {},
    "outputs": [
@@ -241,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d17556cd",
    "metadata": {},
    "outputs": [
@@ -296,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "b215e792",
    "metadata": {},
    "outputs": [
@@ -320,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "921ccaf8",
    "metadata": {},
    "outputs": [
@@ -344,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "8a816c23",
    "metadata": {},
    "outputs": [],
@@ -353,6 +272,140 @@
     "# 2. Большинство слов имеют уровень серьезности Strong\n",
     "# 3. Есть пропущенные значения в дополнительных категориях и канонических формах\n",
     "# 4. Текст является основным признаком для классификации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f9fd564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words('english'))\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "53a2f399",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean(text):\n",
+    "    if pd.isna(text):\n",
+    "        return \"\"\n",
+    "    \n",
+    "    text = text.lower()\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    text = ' '.join(text.split())\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "247e9fc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Датасет успешно сохранен как 'cleaned_profanity.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['cleaned_text'] = df['text'].apply(clean)\n",
+    "\n",
+    "df.to_csv('cleaned_profanity.csv', index=False)\n",
+    "\n",
+    "print(\"Датасет успешно сохранен как 'cleaned_profanity.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "40a081e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('cleaned_profanity.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8acb2beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество пропущенных значений в тексте: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Количество пропущенных значений в тексте: {df['cleaned_text'].isna().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5ec2f8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cleaned_text'] = df['cleaned_text'].fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "eafb2ab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Кодирование целевой переменной\n",
+    "label_encoder = LabelEncoder()\n",
+    "df['category_encoded'] = label_encoder.fit_transform(df['category_1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7ab81252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['cleaned_text']\n",
+    "y = df['category_encoded']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d694ca65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "94472fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(max_features=5000, ngram_range=(1, 2))\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)"
    ]
   }
  ],
