--- a/main.ipynb
+++ b/main.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7421b1c1",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8a816c23",
    "metadata": {},
    "outputs": [],
@@ -331,41 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e0422cfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_df = df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f2ba9e70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Заполнение пропущенных значений\n",
-    "clean_df['category_2'] = clean_df['category_2'].fillna('none')\n",
-    "clean_df['category_3'] = clean_df['category_3'].fillna('none')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "74853cfc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Целевая переменная - объединение категорий\n",
-    "clean_df['target'] = clean_df['category_1'] + '_' + clean_df['severity_description']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c21870e3",
+   "execution_count": 16,
+   "id": "c78173ed",
    "metadata": {},
    "outputs": [
     {
@@ -379,56 +346,45 @@
       "[nltk_data]     C:\\Users\\anmrt\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\anmrt\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     C:\\Users\\anmrt\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Токенизация и очистка текста\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
-    "nltk.download('omw-1.4')\n",
-    "\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "lemmatizer = WordNetLemmatizer()"
+    "nltk.download('omw-1.4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b64abf95",
+   "execution_count": 17,
+   "id": "8d23ba83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_text(text):\n",
-    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "def preprocess_text(text):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    \n",
     "    text = text.lower()\n",
-    "    text = re.sub(r'\\d+', '', text)\n",
+    "    text = re.sub(f'[{re.escape(string.punctuation)}]', '', text)\n",
     "\n",
     "    words = text.split()\n",
     "    words = [lemmatizer.lemmatize(word) for word in words if word not in stop_words]\n",
-    "    return ' '.join(words)\n",
-    "\n",
-    "clean_df['cleaned_text'] = clean_df['text'].apply(clean_text)"
+    "    return ' '.join(words)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b7719a63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_df.to_csv('cleaned_profanity_en.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "302ab384",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
