New data preprocessing and data preparation

--- a/main.ipynb
+++ b/main.ipynb
@@ -385,6 +385,51 @@
     "    words = [lemmatizer.lemmatize(word) for word in words if word not in stop_words]\n",
     "    return ' '.join(words)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "afe70432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_and_preprocess_data(filepath):\n",
+    "    df = pd.read_csv(filepath)\n",
+    "    \n",
+    "    # Заполнение пропущенных значений\n",
+    "    df['category_1'] = df['category_1'].fillna('other')\n",
+    "    df['severity_description'] = df['severity_description'].fillna('Mild')\n",
+    "    \n",
+    "    # Удаление редких категорий (менее 5 примеров)\n",
+    "    category_counts = df['category_1'].value_counts()\n",
+    "    rare_categories = category_counts[category_counts < 5].index\n",
+    "    df = df[~df['category_1'].isin(rare_categories)]\n",
+    "    \n",
+    "    df['processed_text'] = df['text'].apply(preprocess_text)\n",
+    "    \n",
+    "    cleaned_filepath = filepath.replace('.csv', '_cleaned.csv')\n",
+    "    df.to_csv(cleaned_filepath, index=False)\n",
+    "    \n",
+    "    return df, cleaned_filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f88258c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = 'profanity_en.csv'\n",
+    "df, cleaned_filepath = load_and_preprocess_data(filepath)\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(df['category_1'])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df['processed_text'], y, test_size=0.2, random_state=42, stratify=y\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
