Models creation and training

--- a/main.ipynb
+++ b/main.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "c78173ed",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
+   "id": "1a71c680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf = TfidfVectorizer(max_features=5000, ngram_range=(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "8d23ba83",
    "metadata": {},
    "outputs": [],
@@ -388,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "afe70432",
    "metadata": {},
    "outputs": [],
@@ -396,11 +406,11 @@
     "def load_and_preprocess_data(filepath):\n",
     "    df = pd.read_csv(filepath)\n",
     "    \n",
-    "    # Заполнение пропущенных значений\n",
+    "    #Заполнение пропущенных значений\n",
     "    df['category_1'] = df['category_1'].fillna('other')\n",
     "    df['severity_description'] = df['severity_description'].fillna('Mild')\n",
     "    \n",
-    "    # Удаление редких категорий (менее 5 примеров)\n",
+    "    #Удаление редких категорий (менее 5 примеров)\n",
     "    category_counts = df['category_1'].value_counts()\n",
     "    rare_categories = category_counts[category_counts < 5].index\n",
     "    df = df[~df['category_1'].isin(rare_categories)]\n",
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1f88258c",
    "metadata": {},
    "outputs": [],
@@ -429,6 +439,280 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    df['processed_text'], y, test_size=0.2, random_state=42, stratify=y\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d3bd9c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Log regression\n",
+    "lr_pipeline = Pipeline([\n",
+    "    ('tfidf', tfidf),\n",
+    "    ('lr', LogisticRegression(\n",
+    "        max_iter=1000,\n",
+    "        class_weight='balanced',\n",
+    "        C=1.0,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bc14fb68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random forest\n",
+    "rf_pipeline = Pipeline([\n",
+    "    ('tfidf', tfidf),\n",
+    "    ('rf', RandomForestClassifier(\n",
+    "        n_estimators=100,\n",
+    "        class_weight='balanced',\n",
+    "        max_depth=None,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "40f6d45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Soft voting ensamble\n",
+    "ensemble = VotingClassifier(\n",
+    "    estimators=[\n",
+    "        ('lr', lr_pipeline),\n",
+    "        ('rf', rf_pipeline)\n",
+    "    ],\n",
+    "    voting='soft'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ee05a3e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_and_evaluate(model, X_train, y_train, X_test, y_test, model_name):\n",
+    "    print(f\"\\nTraining {model_name}...\")\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    print(f\"\\nEvaluation for {model_name}:\")\n",
+    "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "    print(\"\\nClassification Report:\")\n",
+    "    \n",
+    "    #Уникальные классы в y_test и y_pred\n",
+    "    present_labels = np.unique(np.concatenate([y_test, y_pred]))\n",
+    "    target_names = label_encoder.inverse_transform(present_labels)\n",
+    "    \n",
+    "    print(classification_report(\n",
+    "        y_test, \n",
+    "        y_pred, \n",
+    "        labels=present_labels,\n",
+    "        target_names=target_names\n",
+    "    ))\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b61a3a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training Logistic Regression...\n",
+      "\n",
+      "Evaluation for Logistic Regression:\n",
+      "Accuracy: 0.664576802507837\n",
+      "\n",
+      "Classification Report:\n",
+      "                              precision    recall  f1-score   support\n",
+      "\n",
+      "           animal references       0.00      0.00      0.00         1\n",
+      "   bodily fluids / excrement       0.43      0.10      0.17        29\n",
+      "           mental disability       0.00      0.00      0.00         3\n",
+      "      other / general insult       0.25      0.20      0.22        10\n",
+      "       racial / ethnic slurs       1.00      0.21      0.34        39\n",
+      "           religious offense       1.00      1.00      1.00         4\n",
+      "sexual anatomy / sexual acts       0.67      0.95      0.78       197\n",
+      " sexual orientation / gender       0.70      0.19      0.30        36\n",
+      "\n",
+      "                    accuracy                           0.66       319\n",
+      "                   macro avg       0.51      0.33      0.35       319\n",
+      "                weighted avg       0.67      0.66      0.60       319\n",
+      "\n",
+      "\n",
+      "Training Random Forest...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluation for Random Forest:\n",
+      "Accuracy: 0.670846394984326\n",
+      "\n",
+      "Classification Report:\n",
+      "                              precision    recall  f1-score   support\n",
+      "\n",
+      "           animal references       0.00      0.00      0.00         1\n",
+      "   bodily fluids / excrement       0.60      0.10      0.18        29\n",
+      "           mental disability       0.00      0.00      0.00         3\n",
+      "      other / general insult       1.00      0.20      0.33        10\n",
+      "       racial / ethnic slurs       1.00      0.15      0.27        39\n",
+      "           religious offense       1.00      0.75      0.86         4\n",
+      "sexual anatomy / sexual acts       0.66      0.98      0.79       197\n",
+      " sexual orientation / gender       0.75      0.17      0.27        36\n",
+      "\n",
+      "                    accuracy                           0.67       319\n",
+      "                   macro avg       0.63      0.29      0.34       319\n",
+      "                weighted avg       0.71      0.67      0.59       319\n",
+      "\n",
+      "\n",
+      "Training Ensemble Model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluation for Ensemble Model:\n",
+      "Accuracy: 0.664576802507837\n",
+      "\n",
+      "Classification Report:\n",
+      "                              precision    recall  f1-score   support\n",
+      "\n",
+      "           animal references       0.00      0.00      0.00         1\n",
+      "   bodily fluids / excrement       0.60      0.10      0.18        29\n",
+      "           mental disability       0.00      0.00      0.00         3\n",
+      "      other / general insult       0.40      0.20      0.27        10\n",
+      "       racial / ethnic slurs       1.00      0.15      0.27        39\n",
+      "           religious offense       1.00      1.00      1.00         4\n",
+      "sexual anatomy / sexual acts       0.66      0.97      0.78       197\n",
+      " sexual orientation / gender       0.75      0.17      0.27        36\n",
+      "\n",
+      "                    accuracy                           0.66       319\n",
+      "                   macro avg       0.55      0.32      0.35       319\n",
+      "                weighted avg       0.69      0.66      0.58       319\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\anmrt\\Desktop\\practice_6sem\\venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_model = train_and_evaluate(lr_pipeline, X_train, y_train, X_test, y_test, \"Logistic Regression\")\n",
+    "rf_model = train_and_evaluate(rf_pipeline, X_train, y_train, X_test, y_test, \"Random Forest\")\n",
+    "ensemble_model = train_and_evaluate(ensemble, X_train, y_train, X_test, y_test, \"Ensemble Model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "82a2ff08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing model on sample phrases:\n",
+      "Phrase: 'This is a normal sentence'\n",
+      "Predicted category: sexual anatomy / sexual acts (probability: 0.61)\n",
+      "--------------------------------------------------\n",
+      "Phrase: 'stupid idiot'\n",
+      "Predicted category: sexual anatomy / sexual acts (probability: 0.56)\n",
+      "--------------------------------------------------\n",
+      "Phrase: 'fucking hell'\n",
+      "Predicted category: sexual anatomy / sexual acts (probability: 0.59)\n",
+      "--------------------------------------------------\n",
+      "Phrase: 'you bitch'\n",
+      "Predicted category: sexual orientation / gender (probability: 0.79)\n",
+      "--------------------------------------------------\n",
+      "Phrase: 'that's amazing'\n",
+      "Predicted category: sexual anatomy / sexual acts (probability: 0.61)\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict_profanity(text, model, label_encoder):\n",
+    "    processed_text = preprocess_text(text)\n",
+    "    prediction = model.predict([processed_text])\n",
+    "    probability = np.max(model.predict_proba([processed_text]))\n",
+    "    category = label_encoder.inverse_transform(prediction)[0]\n",
+    "    return category, probability\n",
+    "\n",
+    "# Тестирование на примерах\n",
+    "test_phrases = [\n",
+    "    \"This is a normal sentence\",\n",
+    "    \"stupid idiot\",\n",
+    "    \"fucking hell\",\n",
+    "    \"you bitch\",\n",
+    "    \"that's amazing\"\n",
+    "]\n",
+    "\n",
+    "print(\"\\nTesting model on sample phrases:\")\n",
+    "for phrase in test_phrases:\n",
+    "    category, prob = predict_profanity(phrase, ensemble_model, label_encoder)\n",
+    "    print(f\"Phrase: '{phrase}'\")\n",
+    "    print(f\"Predicted category: {category} (probability: {prob:.2f})\")\n",
+    "    print(\"-\" * 50)"
    ]
   }
  ],
